--- a/src/app/pages/beginner/topics-vocabulary1/topics-vocabulary1.page.html
+++ b/src/app/pages/beginner/topics-vocabulary1/topics-vocabulary1.page.html
@@ -61,22 +61,6 @@
             <ion-grid>
                 <ion-row>
                     <ion-col size="4" class="img">
-                        <img src="/assets/img/countries.jpg">
-                    </ion-col>
-                    <ion-col size="7" class="text">
-                        <h4>Countries and nationalities</h4>
-                        <p>Total x words</p>
-                    </ion-col>
-                    <ion-col size="1" class="seta">
-                        <ion-icon name="arrow-round-forward" size="large"></ion-icon>
-                    </ion-col>
-                </ion-row>
-            </ion-grid>
-        </a>
-        <a href="numbers">
-            <ion-grid>
-                <ion-row>
-                    <ion-col size="4" class="img">
                         <img src="/assets/img/classroom.jpg">
                     </ion-col>
                     <ion-col size="7" class="text">
@@ -114,22 +98,6 @@
                     <ion-col size="7" class="text">
                         <h4>Adjectives</h4>
                         <p>Total 21 words</p>
-                    </ion-col>
-                    <ion-col size="1" class="seta">
-                        <ion-icon name="arrow-round-forward" size="large"></ion-icon>
-                    </ion-col>
-                </ion-row>
-            </ion-grid>
-        </a>
-        <a href="numbers">
-            <ion-grid>
-                <ion-row>
-                    <ion-col size="4" class="img">
-                        <img src="/assets/img/verbPhrases.jpg">
-                    </ion-col>
-                    <ion-col size="7" class="text">
-                        <h4>Verb phrases</h4>
-                        <p>Total x words</p>
                     </ion-col>
                     <ion-col size="1" class="seta">
                         <ion-icon name="arrow-round-forward" size="large"></ion-icon>
@@ -205,42 +173,10 @@
             <ion-grid>
                 <ion-row>
                     <ion-col size="4" class="img">
-                        <img src="/assets/img/verbPhrases.jpg">
-                    </ion-col>
-                    <ion-col size="7" class="text">
-                        <h4>More verb phrases</h4>
-                        <p>Total x words</p>
-                    </ion-col>
-                    <ion-col size="1" class="seta">
-                        <ion-icon name="arrow-round-forward" size="large"></ion-icon>
-                    </ion-col>
-                </ion-row>
-            </ion-grid>
-        </a>
-        <a href="numbers">
-            <ion-grid>
-                <ion-row>
-                    <ion-col size="4" class="img">
                         <img src="/assets/img/theWeather.jpg">
                     </ion-col>
                     <ion-col size="7" class="text">
-                        <h4>The weather and dates</h4>
-                        <p>Total x words</p>
-                    </ion-col>
-                    <ion-col size="1" class="seta">
-                        <ion-icon name="arrow-round-forward" size="large"></ion-icon>
-                    </ion-col>
-                </ion-row>
-            </ion-grid>
-        </a>
-        <a href="numbers">
-            <ion-grid>
-                <ion-row>
-                    <ion-col size="4" class="img">
-                        <img src="/assets/img/goHave.jpg">
-                    </ion-col>
-                    <ion-col size="7" class="text">
-                        <h4>Go, have, get</h4>
+                        <h4>The weather</h4>
                         <p>Total x words</p>
                     </ion-col>
                     <ion-col size="1" class="seta">
@@ -313,6 +249,5 @@
                 </ion-row>
             </ion-grid>
         </a>
-
     </ion-content>
 </ion-app>
