--- a/src/app/pages/beginner/topics-vocabulary1/topicsVocabulary1/activities/activities.page.scss
+++ b/src/app/pages/beginner/topics-vocabulary1/topicsVocabulary1/activities/activities.page.scss
@@ -35,16 +35,16 @@ ion-footer {
 }
 
 ion-card {
-    margin-top: 10%;
+    margin-top: 5%;
 }
 
 h4 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #775350;
-    margin-bottom: 60px;
 }
 
-h3 {
+h6 {
+    margin-top: -10px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #775350;
 }
