--- a/src/app/pages/beginner/topics-grammar1/topicsGrammar1/present-simple/present-simple.page.html
+++ b/src/app/pages/beginner/topics-grammar1/topicsGrammar1/present-simple/present-simple.page.html
@@ -4,6 +4,12 @@
             <ion-buttons slot="start">
                 <ion-back-button defaultHref="topics-grammar1"></ion-back-button>
             </ion-buttons>
+            <ion-buttons slot="end">
+                <ion-button (click)="openLanguagePopover($event)">
+                    <ion-icon name="more" slot="icon-only">
+                    </ion-icon>
+                </ion-button>
+            </ion-buttons>
         </ion-toolbar>
     </ion-header>
 
@@ -16,7 +22,7 @@
                     <ion-card-title>Present simple</ion-card-title>
                 </ion-card-header>
 
-                <h6>Forming the Simple Present tense: to think</h6>
+                <ion-text [innerHTML]="'PRESENTSIMPLE.title' | translate"></ion-text>
 
                 <table class="table table-hover">
                     <thead>
@@ -71,22 +77,25 @@
                 </table>
 
 
-                <h6>The Simple Present is used to <b>describe habits</b>, <b>unchanging situations</b>, <b>general truths</b>, and <b>fixed arrangements</b>. The simple present tense is simple to form. Just use the base form of the verb: (I take, you take,
-                    we take, they take) The 3rd person singular takes an -s at the end: he takes, she takes, etc.</h6>
+                <ion-text [innerHTML]="'PRESENTSIMPLE.explanation' | translate"></ion-text>
 
                 <div class="alert alert-danger" role="alert">
-                    Be careful! The simple present is not used to express actions happening now.
+                    <ion-text [innerHTML]="'PRESENTSIMPLE.becareful' | translate"></ion-text>
                 </div>
 
                 <div class="card">
-                    <h4 class="card-header">Examples</h4>
+                    <h4 class="card-header">
+                        <ion-text [innerHTML]="'PRESENTSIMPLE.examples' | translate"></ion-text>
+                    </h4>
                 </div>
 
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="card">
                             <div class="card-body">
-                                <h6 class="card-title"><strong>For habits:</strong></h6>
+                                <h6 class="card-title">
+                                    <ion-text [innerHTML]="'PRESENTSIMPLE.example1' | translate"></ion-text>
+                                </h6>
                                 <p class="card-text"> 1. He drinks tea at breakfast.
                                     <br>2. She only eats fish.
                                     <br>3. They watch television regularly.</p>
@@ -96,7 +105,9 @@
                     <div class="col-sm-4">
                         <div class="card">
                             <div class="card-body">
-                                <h6 class="card-title"><strong>For repeated actions or events:</strong></h6>
+                                <h6 class="card-title">
+                                    <ion-text [innerHTML]="'PRESENTSIMPLE.example2' | translate"></ion-text>
+                                </h6>
                                 <p class="card-text">1. We catch the bus every morning.
                                     <br>2. It rains every afternoon in the hot season.
                                     <br>3. They drive to Monaco every summer.</p>
@@ -107,7 +118,9 @@
                     <div class="col-sm-4">
                         <div class="card">
                             <div class="card-body">
-                                <h6 class="card-title"><strong>For general truths:</strong></h6>
+                                <h6 class="card-title">
+                                    <ion-text [innerHTML]="'PRESENTSIMPLE.example3' | translate"></ion-text>
+                                </h6>
                                 <p class="card-text">1. Water freezes at zero degrees.
                                     <br>2. The Earth revolves around the Sun.
                                     <br>3. Her mother is Peruvian.
@@ -119,7 +132,9 @@
                     <div class="col-sm-4">
                         <div class="card">
                             <div class="card-body">
-                                <h6 class="card-title"><strong>For fixed arrangements:</strong></h6>
+                                <h6 class="card-title">
+                                    <ion-text [innerHTML]="'PRESENTSIMPLE.example3' | translate"></ion-text>
+                                </h6>
                                 <p class="card-text">1. His mother arrives tomorrow.
                                     <br>2. Our holiday starts on the 26th March</p>
                             </div>
@@ -127,15 +142,9 @@
                     </div>
                 </div>
 
-                <h5>Notes on the Simple Present, third person singular:</h5>
-                <ul>
-                    <li>In the third person singular the verb <strong>always ends in -s</strong>: he want<strong>s</strong>, she need<strong>s</strong>, he give<strong>s</strong>, she think<strong>s</strong>.</li>
-                    <li>Negative and question forms use DOES (= the third person of the auxiliary 'DO') + the infinitive of the verb: He wants ice cream. <strong>Does</strong> he want strawberry? He <strong>does</strong> not want vanilla.</li>
-                    <li>Verbs ending in <strong>-y</strong>: the third person changes the <strong>-y</strong> to <strong>-ies</strong>: fly --> flies, cry --> cries <br><strong>Exception</strong>: if there is a vowel before the -y: play --> plays, pray -->
-                        prays
-                    </li>
-                    <li>Add <strong>-es</strong> to verbs ending in: <strong>-ss, -x, -sh, -ch</strong>: he passes, she catches, he fixes, it pushes</li>
-                </ul>
+                <ion-text [innerHTML]="'PRESENTSIMPLE.title2' | translate"></ion-text>
+
+                <ion-text [innerHTML]="'PRESENTSIMPLE.explanation1' | translate"></ion-text>
             </ion-card>
         </div>
 
