--- a/src/app/pages/beginner/topics-grammar1/topicsGrammar1/quantifiers/quantifiers.page.html
+++ b/src/app/pages/beginner/topics-grammar1/topicsGrammar1/quantifiers/quantifiers.page.html
@@ -4,6 +4,12 @@
             <ion-buttons slot="start">
                 <ion-back-button defaultHref="topics-grammar1"></ion-back-button>
             </ion-buttons>
+            <ion-buttons slot="end">
+                <ion-button (click)="openLanguagePopover($event)">
+                    <ion-icon name="more" slot="icon-only">
+                    </ion-icon>
+                </ion-button>
+            </ion-buttons>
         </ion-toolbar>
     </ion-header>
 
@@ -54,20 +60,11 @@
                     </tbody>
                 </table>
 
-                <ul>
-                    <li>We use How much...? with uncontable (U) nouns and How many...? with plural countable (C) nouns.</li>
-                    <li>We use: <br> a lot (of) with C and U nouns for a <strong>big quantity.</strong> <br> quite a lot (of) for a <strong>medium quantity.</strong> <br> a little / not...much with U nouns for a <strong>small quantity.</strong> <br> a few
-                        / not...many with C plural nouns for a <strong>small quantity.</strong> <br> not...any (none in short answers) for <strong>zero quantity.</strong>
-                    </li>
-                </ul>
+                <ion-text [innerHTML]="'QUANTIFIERS.explanation' | translate"></ion-text>
 
                 <h6><strong>a lot of and much/many</strong></h6>
-                <ul>
-                    <li>In [+] sentences we usually use a lot of.</li>
-                    <li>In [-] sentences and [?], we usually use much and many. <br> I don't drink <strong>much</strong> water. <br> Do you drink <strong>much</strong> coffee?
-                    </li>
-                    <li>It is also possible to use a lot of in [-] and [?]: <br> Do you drink <strong>a lot of</strong> coffee? <br> I don't eat <strong>a lot of</strong> vegetables.</li>
-                </ul>
+
+                <ion-text [innerHTML]="'QUANTIFIERS.explanation2' | translate"></ion-text>
 
             </ion-card>
         </div>
