--- a/src/app/pages/beginner/topics-grammar1/topicsGrammar1/verb-be/verb-be.page.html
+++ b/src/app/pages/beginner/topics-grammar1/topicsGrammar1/verb-be/verb-be.page.html
@@ -4,6 +4,12 @@
             <ion-buttons slot="start">
                 <ion-back-button defaultHref="topics-grammar1"></ion-back-button>
             </ion-buttons>
+            <ion-buttons slot="end">
+                <ion-button (click)="openLanguagePopover($event)">
+                    <ion-icon name="more" slot="icon-only">
+                    </ion-icon>
+                </ion-button>
+            </ion-buttons>
         </ion-toolbar>
     </ion-header>
 
@@ -43,16 +49,8 @@
                     </tbody>
                 </table>
 
-                <ul>
-                    <li>Always use a subject pronoun (you, he, etc.) with a verb, e.g. <b>They</b>'re teachers
-                        <br><b>NOT</b> <s>Are teachers.</s></li>
-                    <li>Always use capital I, e.g. He's Mike and <b>I</b>'m Sally <b>NOT</b> <s>i'm Sally.</s></li>
-                    <li>you = singular and plural.</li>
-                    <li>Use he for a man, she for a woman, and it for a thing.</li>
-                    <li>Use they for people and things.</li>
-                    <li>We use contractions in conversation and in informal writing.</li>
-                    <li>In questions, put am, are, is <b>before</b> I, you, he.</li>
-                </ul>
+                <ion-text [innerHTML]="'VERBBE.explanation' | translate"></ion-text>
+
             </ion-card>
         </div>
     </ion-content>
