--- a/src/app/pages/beginner/topics-vocabulary1/topics-vocabulary1.page.html
+++ b/src/app/pages/beginner/topics-vocabulary1/topics-vocabulary1.page.html
@@ -57,22 +57,6 @@
                 </ion-row>
             </ion-grid>
         </a>
-        <a href="numbers">
-            <ion-grid>
-                <ion-row>
-                    <ion-col size="4" class="img">
-                        <img src="/assets/img/classroom.jpg">
-                    </ion-col>
-                    <ion-col size="7" class="text">
-                        <h4>Classroom language</h4>
-                        <p>Total x words</p>
-                    </ion-col>
-                    <ion-col size="1" class="seta">
-                        <ion-icon name="arrow-round-forward" size="large"></ion-icon>
-                    </ion-col>
-                </ion-row>
-            </ion-grid>
-        </a>
         <a href="things">
             <ion-grid>
                 <ion-row>
@@ -121,7 +105,7 @@
                 </ion-row>
             </ion-grid>
         </a>
-        <a href="numbers">
+        <a href="family">
             <ion-grid>
                 <ion-row>
                     <ion-col size="4" class="img">
@@ -157,22 +141,6 @@
             <ion-grid>
                 <ion-row>
                     <ion-col size="4" class="img">
-                        <img src="/assets/img/time.jpg">
-                    </ion-col>
-                    <ion-col size="7" class="text">
-                        <h4>Time</h4>
-                        <p>Total x words</p>
-                    </ion-col>
-                    <ion-col size="1" class="seta">
-                        <ion-icon name="arrow-round-forward" size="large"></ion-icon>
-                    </ion-col>
-                </ion-row>
-            </ion-grid>
-        </a>
-        <a href="numbers">
-            <ion-grid>
-                <ion-row>
-                    <ion-col size="4" class="img">
                         <img src="/assets/img/theWeather.jpg">
                     </ion-col>
                     <ion-col size="7" class="text">
@@ -185,7 +153,7 @@
                 </ion-row>
             </ion-grid>
         </a>
-        <a href="numbers">
+        <a href="house">
             <ion-grid>
                 <ion-row>
                     <ion-col size="4" class="img">
@@ -193,7 +161,7 @@
                     </ion-col>
                     <ion-col size="7" class="text">
                         <h4>The house</h4>
-                        <p>Total x words</p>
+                        <p>Total 10 words</p>
                     </ion-col>
                     <ion-col size="1" class="seta">
                         <ion-icon name="arrow-round-forward" size="large"></ion-icon>
@@ -233,7 +201,7 @@
                 </ion-row>
             </ion-grid>
         </a>
-        <a href="numbers">
+        <a href="places">
             <ion-grid>
                 <ion-row>
                     <ion-col size="4" class="img">
@@ -241,7 +209,7 @@
                     </ion-col>
                     <ion-col size="7" class="text">
                         <h4>Places and buildings</h4>
-                        <p>Total x words</p>
+                        <p>Total 24 words</p>
                     </ion-col>
                     <ion-col size="1" class="seta">
                         <ion-icon name="arrow-round-forward" size="large"></ion-icon>
