--- a/src/app/pages/beginner/topics-vocabulary1/topicsVocabulary1/house/house.page.scss
+++ b/src/app/pages/beginner/topics-vocabulary1/topicsVocabulary1/house/house.page.scss
@@ -3,7 +3,7 @@ ion-toolbar {
 }
 
 ion-title {
-    margin-left: 25%;
+    margin-left: 10%;
     color: #ffffff;
 }
 
@@ -41,10 +41,10 @@ ion-card {
 h4 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #775350;
-    margin-bottom: 20px;
+    margin-bottom: 60px;
 }
 
-h3 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: #775350;
+ion-button {
+    margin-top: -10%;
+    margin-bottom: 5px;
 }
